@@ -69,8 +69,7 @@
 
   <build>
     <plugins>
-
-      <plugin>
+    <plugin>
         <!-- Configures the compiler. -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -81,148 +80,23 @@
           </compilerArgs>
         </configuration>
       </plugin>
-
-      <plugin>
-        <!-- Unit tests are run by surefire. -->
-        <!-- Classes under src/test/java called *Test are included automatically. -->
-        <!-- Unit tests are run during the test phase. -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-           <testFailureIgnore>true</testFailureIgnore>
-           <!--<excludes>
-                 <exclude>src/test/java/*IT.java</exclude>
-          </excludes> -->
-          </configuration>
-        <version>2.22.0</version>
-      </plugin>
-      <plugin>
-        <!-- Integration tests are run by failsafe. -->
-        <!-- Classes under src/test/java called *IT are included automatically. -->
-        <!-- Integration tests are run during the verify phase. -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <configuration>
-             <testFailureIgnore>true</testFailureIgnore>
-             <includes>
-                   <include>src/test/java/*IT.java</include>
-             </includes>
-         </configuration>
-         <version>2.22.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <!-- Code coverage plugin. -->
-        <!-- This sets up code coverage for the unit tests, the integration tests, -->
-        <!-- and the combined coverage of both. -->
-        <!-- After running a `mvn clean install`, open `target/site/jacoco-both/index.html` in a browser. -->
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco.plugin.version}</version>
-        <executions>
-          <execution>
-            <id>jacoco-prepare-agent</id>
-            <phase>process-test-classes</phase>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
-                  <destFile>${sonar.jacoco.reportPath}</destFile>
-                  <propertyName>jacoco.agent.ut.arg</propertyName>
-                  <append>true</append>
-            </configuration>
-          </execution>
-          <execution>
-            <id>jacoco-prepare-agent-integration</id>
-            <goals>
-              <goal>prepare-agent-integration</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>prepare-iintegrationTest-agent</id>
-            <phase>package</phase>
-            <goals>
-              <goal>prepare-agent-integration</goal>
-            </goals>
-            <configuration>
-                  <destFile>${sonar.jacoco.itReportPath}</destFile>
-                  <propertyName>jacoco.agent.it.arg</propertyName>
-                  <append>true</append>
-             </configuration>
-          </execution>
-          <execution>
-            <id>jacoco-check</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <rules />
-            </configuration>
-          </execution>
-          <execution>
-            <!-- Combine the code coverage statistics generated for the unit and the integration tests. -->
-            <id>jacoco-merge</id>
-            <goals>
-              <goal>merge</goal>
-            </goals>
-            <phase>verify</phase>
-            <configuration>
-              <fileSets>
-                <fileSet>
-                  <directory>${project.build.directory}</directory>
-                  <includes>
-                    <include>*.exec</include>
-                  </includes>
-                </fileSet>
-              </fileSets>
-              <destFile>${project.build.directory}/jacoco-both.exec</destFile>
-            </configuration>
-          </execution>
-          <execution>
-            <id>jacoco-integration</id>
-            <goals>
-              <goal>report-integration</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>jacoco-reportboth</id>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <configuration>
-              <dataFile>${project.build.directory}/jacoco-both.exec</dataFile>
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco-both</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-surefire-plugin</artifactId>
-  <version>2.22.0</version>
+  <version>2.12.1</version>
   <configuration>
-<argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled ${jacoco.agent.ut.arg}</argLine>
-  <!-- <excludes>
-    <exclude>src/test/java/*IT.java</exclude>
-  </excludes> -->
+  <excludes>
+    <exclude>**/**IT*</exclude>
+  </excludes>
   </configuration>
 </plugin>
-<plugin>
+    <plugin>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-failsafe-plugin</artifactId>
-<version>2.22.0</version>
+<version>2.12.4</version>
 <configuration>
-<argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg}</argLine>
 <includes>
-<include>src/test/java/*IT.java</include>
+<include>**/**IT*</include>
 </includes>
 </configuration>
 <executions>
